Refators and updates