@@ -12,6 +12,8 @@ import org.slf4j.LoggerFactory;
 import com.generic.rest.core.BaseConstants;
 import com.generic.rest.core.BaseConstants.MSGERROR;
 
+import io.micrometer.core.instrument.util.StringUtils;
+
 public class CalendarUtils {
 	
 	private CalendarUtils() {
@@ -21,13 +23,13 @@ public class CalendarUtils {
 	private static final Logger log = LoggerFactory.getLogger(CalendarUtils.class);
 	
 	public static Calendar createCalendarFromString(String dateText, String dateFormat) {
-		if (dateText == null || "".equals(dateText)) {
+		if (StringUtils.isBlank(dateText)) {
 			return null;
 		}
 		
 		Calendar calendar = Calendar.getInstance(TimeZone.getTimeZone(BaseConstants.DATE_TIMEZONE));
 		SimpleDateFormat simpleDateFormat = new SimpleDateFormat(dateFormat, 
-				new Locale(BaseConstants.LOCALE_PT, BaseConstants.LOCALE_BR));
+				Locale.of(BaseConstants.LOCALE_PT, BaseConstants.LOCALE_BR));
 
 		try {
 			calendar.setTime(simpleDateFormat.parse(dateText));
@@ -42,7 +44,7 @@ public class CalendarUtils {
 	
 	public static Calendar createCalendarFromMiliseconds(Long miliseconds) {
 		Calendar calendar = Calendar.getInstance(TimeZone.getTimeZone(BaseConstants.DATE_TIMEZONE), 
-				new Locale(BaseConstants.LOCALE_PT, BaseConstants.LOCALE_BR));
+				Locale.of(BaseConstants.LOCALE_PT, BaseConstants.LOCALE_BR));
 		calendar.setTimeInMillis(miliseconds);
 		return calendar;
 	}
